simple-nginx/deployment-server-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-server-secret-deployment
  labels:
    environment: ngnix-server-secret
    app: server-secret
    component: ngnix-server-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ngnix-server-secret
  template:
    metadata:
      labels:
        component: ngnix-server-secret
    spec:
      containers:
      - name: ngnix-server-container-secret
        image: nginx:1.17
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
        - name: secret
          mountPath: /opt/secret  
      volumes:
      - name: config
        configMap:
          name: app-secret
      - name: secret
        secret:
            secretName: app
