simple-nginx/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngnix-server-deployment
  labels:
    environment: simple-ngnix
    app: server
    component: ngnix-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ngnix-server
  template:
    metadata:
      labels:
        component: ngnix-server
    spec:
      containers:
      - name: ngnix-server-container
        image: nginx:1.17
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config
        configMap:
          name: app
