simple-nginx/service-secret.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnix-server-service-secret
spec:
# Have access via NodeIP
# curl 172.17.0.2:31515
#  type: NodePort
  selector:
    component: ngnix-server-secret
  ports:
  - port: 80
    targetPort: 80
#    nodePort: 31515
