simple-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ngnix-server-ingress
spec:
  rules:
  - host: hello-world.info #172.17.0.2 minikube ip
    http: 
      paths:
      - path: /app
        backend:
          serviceName: ngnix-server-service
          servicePort: 80
      - path: /sec
        backend:
          serviceName: ngnix-server-service-secret
          servicePort: 80
